--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -5,6 +5,7 @@
   line-height: 30px;
   text-align: center;
   text-transform: uppercase;
+  word-wrap: break-word;
   display: block;
   width: 350px;
   border: 1px solid #fff;
