--- a/src/blocks/header/__text-accent/header__text-accent.css
+++ b/src/blocks/header/__text-accent/header__text-accent.css
@@ -1,3 +1,4 @@
 .header__text-accent {
   font-weight: 700;
+  overflow-wrap: break-word;
 }
