--- a/src/blocks/header/__title/header__title.css
+++ b/src/blocks/header/__title/header__title.css
@@ -5,6 +5,7 @@
   font-size: 54px;
   line-height: 68px;
   letter-spacing: 0.1px;
+  word-wrap: break-word;
   margin: 0 0 12px 0;
   padding: 172px 0 0;
 }
